[project]
name = "zero-to-one_hundred"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.12"
description = "Simple python tool to learn everything and keep it local"
author_email = "obar1+gh@pm.me"
dependencies = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.6",
    "yt-dlp>=2025.3.31",
    "loguru>=0.7.2",
    "pymupdf>=1.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250402",
    "pre-commit>=3.7.0"
]
